Added event translations for de/es/fr

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Meta -->
-	<title>GW2Timer.com - World Boss Timers and Daily Map Guide</title>
+	<title>GW2Timer.com - Advanced GW2 Timer and Daily Map Guide</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
 	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events, with walkthroughs, daily achievements, jumping puzzles gathering map, and personal checklists." />
@@ -157,7 +157,7 @@
 			<time id="itemTimeLocal" class="itemTimeDigital">00:00</time>
 			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
 			<div id="itemLanguage">
-				<a><img src="img/ui/language.png" alt="Language" /> <abbr>Łâñgß</abbr></a>
+				<a id="itemLanguageButton"><img src="img/ui/language.png" alt="Language" /> <abbr>A ⇔ あ</abbr></a>
 				<ul id="itemLanguageChoices">
 					<li><a href="./?enu_Language=en">English</a></li>
 					<li><a href="./?enu_Language=de">Deutsch</a></li>
