--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		- You are still loading the website (slowly); ignore this message.<br />
 		- You are using Internet Explorer 10 or lower; please <a href="http://microsoft.com/ie">upgrade</a> to IE11 or higher.<br />
 		- Your browser's adblocker is blocking the leaflet.js map script; please whitelist it.<br />
-		- You have JavaScript disabled; this whole application runs on JavaScript!<br />
+		- You have JavaScript disabled; this whole application runs in JavaScript!<br />
 		- This web application encountered a bug; try refreshing, or <a href="bin/clear.html">clearing</a> its localStorage.<br />
 		Do you want to <a href="http://forum.renaka.com/topic/5476238/">report</a> this problem?<br />
 	</div>
@@ -60,7 +60,7 @@
 				<input id="mapCoordinatesRegion" type="text" />
 			</div>
 			<div id="itemMapButtons">
-				<a title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">gw2timer.com</a>
+				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">gw2timer.com</a>
 				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
 			</div>
 		</section>
@@ -167,16 +167,17 @@
 					<li><a href="./?enu_Language=pl">Polski</a></li>
 					<li><a href="./?enu_Language=ru">Русский</a></li>
 					<li><a href="./?enu_Language=zh">中文</a></li>
+					<li><a class="linkExternal" href="http://forum.renaka.com/topic/5476238/"><sub>Help Translate</sub></a></li>
 				</ul>
 			</div>
 			<div id="itemSocial">
-				<a title="<dfn>Learn GW2Timer's features :?</dfn>" href="http://i.imgur.com/KvJEr58.png">
+				<a class="linkExternal" title="<dfn>Learn GW2Timer's features :?</dfn>" href="http://i.imgur.com/KvJEr58.png">
 					<img src="img/ui/info.png" alt="Info" />
 				</a>
-				<a title="<dfn>Like GW2Timer on Facebook :)</dfn>" href="http://www.facebook.com/gw2timer">
+				<a class="linkExternal" title="<dfn>Like GW2Timer on Facebook :)</dfn>" href="http://www.facebook.com/gw2timer">
 					<img src="img/ui/fb.png" alt="Facebook" />
 				</a>
-				<a title="<dfn>Tweet GW2Timer on Twitter :)</dfn>" href="http://twitter.com/intent/tweet?text=http%3A%2F%2FGW2Timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide">
+				<a class="linkExternal" title="<dfn>Tweet GW2Timer on Twitter :)</dfn>" href="http://twitter.com/intent/tweet?text=http%3A%2F%2FGW2Timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide">
 					<img src="img/ui/tt.png" alt="Twitter" />
 				</a>
 			</div>
