--- a/map.html
+++ b/map.html
@@ -77,6 +77,7 @@ var GW2T_RESOURCES_DATA = {
 		[14259, 23476], // malchor
 		[11008, 23944], // malchor
 		[10722, 27467], // cursed
+		[11313, 26808], // cursed
 		[11658, 29144] // cursed
 		], type: "Metal"
 	},
@@ -250,7 +251,16 @@ var GW2T_RESOURCES_DATA = {
 
 <header class="cntHeader">Map</header>
 
-<header id="headerMap_Zone" class="jsSection"><img src="img/map/completion.png" alt="Map Zones" />Map Zones</header>
+<header id="headerMap_Zone" class="jsSection"><img src="img/map/completion.png" alt="Map Zones" /><var
+	data-de="Karte Zonen"
+	data-es="Zonas del Mapa"
+	data-fr="Carte des Zones"
+	data-nl="Kaart Zonez"
+	data-pl="Mapa Strefy"
+	data-ru="Зоны на Карте"
+	data-zh="圖區"
+	>Map Zones</var>
+</header>
 <section>
 <div class="mapZoneList mapLinks">
 	<div>
@@ -311,7 +321,16 @@ var GW2T_RESOURCES_DATA = {
 </div>
 </section>
 
-<header id="headerMap_Daily" class="jsSection"><img src="img/ui/ap.png" alt="Daily Achievements" />Daily Achievements</header>
+<header id="headerMap_Daily" class="jsSection"><img src="img/ui/ap.png" alt="Daily Achievements" /><var
+	data-de="Täglich Leistungen"
+	data-es="Logros Diarios"
+	data-fr="Succèses Quotidiennes"
+	data-nl="Dagelijkse Prestaties"
+	data-pl="Dzienne Osiągnięcia"
+	data-ru="Ежедневные Достижения"
+	data-zh="成就每天"
+	>Daily Achievements</var>
+</header>
 <section>
 <p>These are some places to complete dailies quickly; the top of each list should be the fastest. Most of the places are based on the <a href="http://wiki.guildwars2.com/wiki/Daily">wiki</a>; if you know a good spot, please <a href="http://forum.renaka.com/topic/5476238/">share it</a>. Click a daily icon on the map to zoom in/out.</p>
 <button id="mapToggle_Daily" class="cssRight">Toggle Icons</button>
@@ -324,7 +343,7 @@ var GW2T_RESOURCES_DATA = {
 	<dt data-coord="[22587, 15535]">Outcast's Cleft</dt><dd>Shiverpeaks-Wayfarer svanirs</dd>
 	<dt data-coord="[23136, 13562]">Grawlenfjord</dt><dd>Shiverpeaks-Wayfarer arctodus and barracudas</dd>
 	<dt data-coord="[27618, 15147]">Windrock Maze</dt><dd>Ascalon-Ashford various mobs</dd>
-	<dt data-coord="[10887, 25671]">Fields of Gold</dt><dd>Orr-Cursed risens</dd>
+	<dt data-coord="[11729, 28750]">Desmina's Hallows</dt><dd>Orr-Cursed risens</dd>
 </dl>
 <br />
 
@@ -391,7 +410,7 @@ If there are others doing the daily, you should revive to 20% then move to the n
 <dl id="mapDailyList_Reviver">
 	<dt data-coord="[8698, 20360]">Jetzar Falls</dt><dd>Metrica Obsolete SCRAP-BOTs</dd>
 	<dt data-coord="[7617, 17607]">Thaumanova Reactor</dt><dd>Metrica irradiated asura</dd>
-	<dt data-coord="[6305, 15965]">Vandal's Claim</dt><dd>Brisban minefield</dd>
+	<dt data-coord="[6385, 15874]">Vandal's Claim</dt><dd>Brisban minefield</dd>
 	<dt data-coord="[14143, 13005]">The Bloodfields</dt><dd>Gendarran seraphs battlefield*</dd>
 	<dt data-coord="[29670, 12434]">Lowland Burns</dt><dd>Blazeridge sentinel tank squad*</dd>
 	<dt data-coord="[25035, 12263]">Old Grendich</dt><dd>Diessa blood legion squad</dd>
@@ -423,7 +442,16 @@ You may need to complete the heart before you can purchase.
 </section>
 
 
-<header id="headerMap_Resource" class="jsSection"><img src="img/ui/resource.png" alt="Resource Nodes" />Resource Nodes</header>
+<header id="headerMap_Resource" class="jsSection"><img src="img/ui/resource.png" alt="Resource Nodes" /><var
+	data-de="Ressourcen"
+	data-es="Recursos"
+	data-fr="Ressources"
+	data-nl="Hulpbronnen"
+	data-pl="Zasobów"
+	data-ru="Ресурсы"
+	data-zh="資源"
+	>Resource Nodes</var>
+</header>
 <section>
 <div style="width:100%;height:32px"><button id="mapToggle_Resource" class="cssRight">Toggle Icons</button></div>
 <div class="mapResourceList">
@@ -438,7 +466,16 @@ Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in 
 </section>
 
 
-<header id="headerMap_JP" class="jsSection"><img src="img/ui/jp.png" alt="Jumping Puzzles" />Jumping Puzzles</header>
+<header id="headerMap_JP" class="jsSection"><img src="img/ui/jp.png" alt="Jumping Puzzles" /><var
+	data-de="Rätsel Springen"
+	data-es="Rompecabezas Saltos"
+	data-fr="Énigmes Sauts"
+	data-nl="Springt Puzzels"
+	data-pl="Skoki Zagadki"
+	data-ru="Переход Пазлы"
+	data-zh="跳躍謎題"
+	 >Jumping Puzzles</var>
+</header>
 <section>
 <p>The JP map icons point to the entrance. Click on a checkbox here or a JP icon on the map to check off a JP. Double click a JP icon to zoom in/out.<br />Links: [Y]outube [W]iki.</p>
 <button id="mapToggle_JP" class="cssRight">Toggle Icons</button>
@@ -504,7 +541,16 @@ A marathon of intricate jumps.
 </section>
 
 
-<header id="headerMap_Personal" class="jsSection"><img src="img/ui/checklist.png" alt="Personal" />Personal Checklist</header>
+<header id="headerMap_Personal" class="jsSection"><img src="img/ui/checklist.png" alt="Personal" /><var
+	data-de="Persönliche Checkliste"
+	data-es="Lista Personal"
+	data-fr="Liste Personnelle"
+	data-nl="Persoonlijke Checklist"
+	data-pl="Osobista Lista"
+	data-ru="Личный Список"
+	data-zh="個人清單"
+	>Personal Checklist</var>
+</header>
 <section>
 
 <samp class="jsHelpCollapsible"></samp>
