Changed error warnings

--- a/m/index.html
+++ b/m/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Meta -->
-	<title>GW2Timer.com 404</title>
+	<title>GW2Timer.com Mobile/Simple Mode</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="noindex, nofollow, noarchive" />
 <!-- Google Analytics -->
