--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 				<input id="mapCoordinatesRegion" type="text" />
 			</div>
 			<div id="itemMapButtons">
-				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">gw2timer.com</a>
+				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">gw2timer.com /</a>
+				<a id="linkModeSimple" title="<dfn>Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a>
 				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
 			</div>
 		</section>
@@ -168,7 +169,7 @@
 				<img id="itemClockWaypoint2" src="img/map/waypoint.png" alt="X:30 Waypoint">
 				<img id="itemClockWaypoint3" src="img/map/waypoint.png" alt="X:45 Waypoint">
 			</div>
-			<a id="itemTimeLocal" class="itemTimeDigital" title="<dfn>Change Clock View</dfn>" href="./?mode=Simple">00:00</a>
+			<time id="itemTimeLocal" class="itemTimeDigital"><var id="itemTimeLocalActual">00:00</var><var id="itemTimeLocalExtra"></var></time>
 			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
 			<div id="itemLanguage">
 				<img src="img/ui/language.png" alt="Language" /> <abbr>A ⇔ あ</abbr>
