Changed Polish translation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 			<div id="itemMapButtons">
 				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">gw2timer.com /</a>
-				<a id="linkModeSimple" title="<dfn>Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a>
+				<a id="linkModeSimple" title="<dfn>Simple Clock Mode</dfn>" href="./m">simple mode</a>
 				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
 			</div>
 		</section>
@@ -280,7 +280,7 @@
 					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
 					<br />
 					<h2>Alarm</h2>
-					<span>Text-to-Speech requires Chrome or Firefox. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
+					<span>Voice announcement requires Chrome or Firefox. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
 					<h3>Checklist Mode</h3>
 					<span>When should the program announce the next chain?</span>
 					<label title="This is every 15 minutes."><input id="opt_bol_alertAtStart" type="checkbox" /> When a new chain begins</label>
