--- a/m/index.html
+++ b/m/index.html
@@ -19,5 +19,5 @@
 <script type="text/javascript">setTimeout("window.location = 'http://gw2timer.com/?mode=Simple'", 500);</script>
 </head>
 
-<body></body>
+<body>Redirecting to <a href="http://gw2timer.com/?mode=Simple">http://gw2timer.com/?mode=Simple</a></body>
 </html>
