Show translation button on simple mode

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			<time id="itemTimeLocal" class="itemTimeDigital"><var id="itemTimeLocalActual">00:00</var><var id="itemTimeLocalExtra"></var></time>
 			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
 			<div id="itemLanguage">
-				<img src="img/ui/language.png" alt="Language" /> <abbr>A ⇔ あ</abbr>
+				<span><img src="img/ui/language.png" alt="Language" /> <abbr>A ⇔ あ</abbr></span>
 				<ul id="itemLanguageChoices">
 					<li><a href="./?enu_Language=en">English</a></li>
 					<li><a href="./?enu_Language=de">Deutsch</a></li>
