Added Living Story events

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 		<section id="paneClock" class="paneRight clkSizeRegular">
 			<div id="paneClockBack" class="clkSizeRegular"></div>
 			<div id="paneClockBackground" class="clkSizeRegular"></div>
-			<div id="itemClockFace" class="clkSizeRegular">
+			<div id="paneClockFace" class="clkSizeRegular"></div>
+			<div id="paneClockIcons" class="clkSizeRegular">
 				<img id="itemClockIconStandard0" class="iconSD" src="img/chain/tbd.png" alt="X:00" />
 				<img id="itemClockIconStandard1" class="iconSD" src="img/chain/tbd.png" alt="X:15" />
 				<img id="itemClockIconStandard2" class="iconSD" src="img/chain/tbd.png" alt="X:30" />
@@ -182,7 +183,7 @@
 					<li><a href="./?enu_Language=pl">Polski</a></li>
 					<li><a href="./?enu_Language=ru">Русский</a></li>
 					<li><a href="./?enu_Language=zh">中文</a></li>
-					<li><a class="linkExternal" href="http://forum.renaka.com/topic/5476238/"><sub>Help Translate</sub></a></li>
+					<li><a class="linkExternal" href="http://forum.renaka.com/topic/5529319/"><sub>Help Translate</sub></a></li>
 				</ul>
 			</div>
 			<div id="itemSocial">
