--- a/map.html
+++ b/map.html
@@ -4,6 +4,7 @@ var GW2T_RESOURCES_DATA = {
 		nodes: [
 		[8526, 17275], // metrica
 		[7576, 18624], // metrica
+		[7333, 18850], // metrica
 		[9860, 16199], // caledon
 		[10138, 17684], // caledon
 		[11750, 13108], // queensdale 
@@ -248,8 +249,10 @@ var GW2T_RESOURCES_DATA = {
 </script>
 
 <div class="cntComposition">
-
 <header class="cntHeader">Map</header>
+
+
+
 
 <header id="headerMap_Zone" class="jsSection"><img src="img/map/completion.png" alt="Map Zones" /><var
 	data-de="Karte Zonen"
@@ -320,6 +323,9 @@ var GW2T_RESOURCES_DATA = {
 	</div>
 </div>
 </section>
+
+
+
 
 <header id="headerMap_Daily" class="jsSection"><img src="img/ui/ap.png" alt="Daily Achievements" /><var
 	data-de="Täglich Leistungen"
@@ -442,6 +448,8 @@ You may need to complete the heart before you can purchase.
 </section>
 
 
+
+
 <header id="headerMap_Resource" class="jsSection"><img src="img/ui/resource.png" alt="Resource Nodes" /><var
 	data-de="Ressourcen"
 	data-es="Recursos"
@@ -464,6 +472,8 @@ You may need to complete the heart before you can purchase.
 <div class="mapLegendLine" style="border-bottom: 2px dashed lime"></div> <strong>Map</strong> has that resource (not a node)<br />
 Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
 </section>
+
+
 
 
 <header id="headerMap_JP" class="jsSection"><img src="img/ui/jp.png" alt="Jumping Puzzles" /><var
@@ -496,7 +506,7 @@ Simple jumps.
 	<dt id="mapJP_34" data-coord="[26258, 13026]" data-img="CETyR64">Crimson Plateau</dt><dd>Diessa grawl plateau with rocks and ruins</dd>
 	<dt id="mapJP_31" data-coord="[25136, 12227]" data-img="7Qxd1Wx">Grendich Gamble</dt><dd>Diessa ruined Ascalonian stone tower climb</dd>
 	<dt id="mapJP_32" data-coord="[25530, 13388]" data-img="c8sAP6V">Wall Breach Blitz</dt><dd>Diessa long Ascalonian wall with vista at end</dd>
-	<dt id="mapJP_35" data-coord="[27345, 13106]" data-img="S0JZgxG">Chaos Crystal Cavern</dt><dd>Marches skip rocks jumps with character transformations. <a href="http://i.imgur.com/hQKO6Mi.png">Shortcut note</a></dd>
+	<dt id="mapJP_39" data-coord="[31116, 15198]" data-img="5AOBdga">Behem Gauntlet</dt><dd>Blazeridge deep spider bat cave</dd>
 	<dt id="mapJP_33" data-coord="[25986, 10719]" data-img="0RIGbvR">Pig Iron Quarry</dt><dd>Fireheart suspended carts high over two hills</dd>
 	<dt id="mapJP_16" data-coord="[16325, 24485]" data-img="1whVJrb">Vizier's Tower</dt><dd>Straits coral climb up a plateau tower</dd>
 	<dt id="mapJP_5" data-coord="[11078, 29012]" data-img="5AAMpcO">Buried Archives</dt><dd>Cursed wall coral jump through risens eagles</dd>
@@ -520,7 +530,7 @@ Tricky jumps or interaction required.
 	<dt id="mapJP_26" data-coord="[21080, 18861]" data-img="jG5uLNJ">Only Zuhl</dt><dd>Timberline ice cave then lava dredge/destroyer mine. You have to kill a champ at the end to get credit</dd>
 	<dt id="mapJP_36" data-coord="[28465, 15425]" data-img="dtnDiEQ">Loreclaw Expanse</dt><dd>Ashford water cavern Ascalonian ruins with traps</dd>
 	<dt id="mapJP_37" data-coord="[28948, 16834]" data-img="QATS0uY">Branded Mine</dt><dd>Fields metal platforms jaggedly hung on chains</dd>
-	<dt id="mapJP_39" data-coord="[31116, 15198]" data-img="5AOBdga">Behem Gauntlet</dt><dd>Blazeridge deep spider bat cave</dd>
+	<dt id="mapJP_35" data-coord="[27345, 13106]" data-img="S0JZgxG">Chaos Crystal Cavern</dt><dd>Marches skip rocks jumps with character transformations. <a href="http://i.imgur.com/hQKO6Mi.png">Shortcut note</a></dd>
 	<dt id="mapJP_38" data-coord="[30901, 12471]" data-img="2Q5FzbJ">Craze's Folly</dt><dd>Blazeridge Separatists hideout and troll cave. <a href="http://i.imgur.com/WNCAQlk.png">Grand Chest note</a></dd>
 	<dt id="mapJP_9" data-coord="[13598, 24798]" data-img="JlHp1Jb">Antre of Adjournment</dt><dd>Malchor's cave wall climb with mini treasure chests</dd>
 </dl>
@@ -539,6 +549,8 @@ A marathon of intricate jumps.
 <br />
 </div>
 </section>
+
+
 
 
 <header id="headerMap_Personal" class="jsSection"><img src="img/ui/checklist.png" alt="Personal" /><var
@@ -645,6 +657,9 @@ A marathon of intricate jumps.
 </div>
 <br />
 </section>
+
+
+
 
 <br />
 <samp class="jsHelpCollapsible"></samp>
