More LS events, fixed final events recoloring

--- a/map.html
+++ b/map.html
@@ -661,6 +661,24 @@ A marathon of intricate jumps.
 
 
 
+<header id="headerMap_Story" class="jsSection"><img src="img/ui/ls.png" alt="Living Story" /><var
+	data-de="Erzählung"
+	data-es="Historia"
+	data-fr="Histoire"
+	data-nl="Verhaal"
+	data-pl="Historia"
+	data-ru="Рассказ"
+	data-zh="故事"
+	>Living Story</var>
+</header>
+<section>
+
+Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
+</section>
+
+
+
+
 <br />
 <samp class="jsHelpCollapsible"></samp>
 <div>
