--- a/map.html
+++ b/map.html
@@ -661,7 +661,7 @@ A marathon of intricate jumps.
 
 
 
-<header id="headerMap_Story" class="jsSection"><img src="img/ui/ls.png" alt="Living Story" /><var
+<!--<header id="headerMap_Story" class="jsSection"><img src="img/ui/ls.png" alt="Living Story" /><var
 	data-de="Erzählung"
 	data-es="Historia"
 	data-fr="Histoire"
@@ -673,8 +673,7 @@ A marathon of intricate jumps.
 </header>
 <section>
 
-Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
-</section>
+</section>-->
 
 
 
