Initial work on collectible map section

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 				</header>
 				<div id="listChainsTemple" class="listChains"></div>
 				<header id="headerTimetable">
-					<img src="img/event/special.png" alt="Timetable" />
+					<img src="img/ui/clock.png" alt="Timetable" />
 					<span>Full Timetable</span>
 					<ins></ins>
 				</header>
