Finished collectible items section

--- a/help.html
+++ b/help.html
@@ -118,7 +118,7 @@
 </section>
 
 
-<header id="headerHelp_Unscheduled" class="jsSection"><img src="img/event/boss.png" alt="Unscheduled Bosses" />Unscheduled Bosses</header>
+<header id="headerHelp_Legacy" class="jsSection"><img src="img/event/boss.png" alt="Legacy Bosses" />Legacy Bosses</header>
 <section>
 <h2>Fire Shaman</h2>
 <p>Jump through a <ins data-coord="[27494, 9876]">crevice</ins> in the obsidian wall to get to the boss. His phases are as follows: Minions -&gt; Boss -&gt; Minions -&gt; Boss -&gt; Minions -&gt; Boss. You can attack the boss normally, but during the minions phase, you have to kill enough minions for the boss to be attackable again. There is a hidden mechanic (or bug) where stepping near the giant <ins data-coord="[27415, 9639]">Fire Elemental</ins> will cause the event's progress to reset, so people should stay and kill minions near the heal bubble the charr allies made. Crossing the fire lines or attacking the boss is okay as long as nobody touches the giant Fire Elemental, but you should not take this chance as ignorant players will follow you and bungle it. This chain restarts after 25-35 minutes. (D15-25)</p>
