--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
 				</header>
 				<div id="listChainsScheduled" class="listChains"></div>
 				<header>
-					<img src="img/event/boss.png" alt="Unscheduled Bosses" />
-					<span>Unscheduled Bosses</span>
+					<img src="img/event/boss.png" alt="Legacy Bosses" />
+					<span>Legacy Bosses</span>
 					<ins></ins>
 				</header>
-				<div id="listChainsUnscheduled" class="listChains"></div>
+				<div id="listChainsLegacy" class="listChains"></div>
 				<header>
 					<img src="img/chain/temple.png" alt="Orr Temples" />
 					<span>Orr Temples</span>
