Added option for expanding chain bars

--- a/index.html
+++ b/index.html
@@ -251,10 +251,11 @@
 			<article id="layerOptions">
 				<div class="cntComposition">
 					<header class="cntHeader">Options</header>
+					<samp class="jsHelpTooltip" title="A <em>chain</em> is a successive group of events. A <em>world boss</em> is usually the final event of a chain."></samp>
 					<br />
 					<h2>Timer</h2>
 					<label title="Hide the chain bars when you check them."><input id="opt_bol_hideChecked" type="checkbox" /> Hide checked off world bosses</label>
-					<label title="13:00:00 or 1:00:00 PM"><input id="opt_bol_use24Hour" type="checkbox" /> Use 24 hour format</label>
+					<label title="Automatically expand orange chain bars and collapse gray ones at every quarter hour."><input id="opt_bol_expandEvents" type="checkbox" /> Expand events for active chains</label>
 					<label title="Make the clock area smaller."><input id="opt_bol_compactClock" type="checkbox" /> Compact the clock pane</label>
 					<label title="Show/Hide the entire clock area."><input id="opt_bol_showClock" type="checkbox" /> Show the clock pane</label>
 					<div class="optFieldsets">
@@ -296,6 +297,7 @@
 					<label title="Automatically clear the boss checklist on the daily reset time."><input id="opt_bol_clearChainChecklistOnReset" type="checkbox" /> Clear boss checklist on server reset (Midnight UTC)</label>
 					<label title="Automatically clear the dungeon and custom checklist on the daily reset time."><input id="opt_bol_clearPersonalChecklistOnReset" type="checkbox" /> Clear personal checklist on server reset</label>
 					<label title="DST for showing ArenaNet Washington-US time."><input id="opt_bol_detectDST" type="checkbox" /> Detect Daylight Saving Time</label>
+					<label title="13:00:00 or 1:00:00 PM"><input id="opt_bol_use24Hour" type="checkbox" /> Use 24 hour format</label>
 					<br />
 					<h2>Defaults</h2>
 					<div class="optButtons">
